app/src/main/java/com/example/httperrorhandling/network/errors/UnknownException.kt
package com.example.httperrorhandling.network.errors

class UnknownException(override val message: String?, override val cause: Throwable?) :
    Exception()